# SSD20x_DisplayDemo

application/: app.mk  app_Readme.txt
application/customer_zk/res/ui/: Charge.ftu  Charge2.ftu  ad.ftu  animation.ftu  detail.ftu  inputtext.ftu  main.ftu  painter.ftu  pointer.ftu  qrcode.ftu  sliderwindow.ftu  testButton.ftu  testSlider.ftu  testText.ftu  testpointer.ftu  uart.ftu  washer.ftu  window.ftu  xinfeng.ftu
application/smarttalk/: README.txt  image.mk
application/smarttalk/3partyLib/guilib/include/mgncs4touch/: Makefile  Makefile.am  Makefile.in
application/smarttalk/3partyLib/guilib/include/mgncs4touch/physics-animation/: Makefile  Makefile.am  Makefile.in
application/smarttalk/3partyLib/guilib/include/mgncs4touch/pieces/: Makefile  Makefile.am  Makefile.in  mtransroundpiece.h
application/smarttalk/3partyLib/guilib/include/mgutils/: mgutilsconfig.h
application/smarttalk/3partyLib/guilib/include/minigui/: gdi.h  mgconfig.h  minigui.h
application/smarttalk/RunFile/: demo.sh  hscrollview.rc  smartDevInfo.xml  smartLayout_1024x600.xml  smartLayout_800x480.xml
application/smarttalk/RunFile/etc/: MiniGUI.cfg
application/smarttalk/demoApp/: CMakeLists.txt  app_config.h  cmdqueue.cpp  demoApp.cpp  main_ui.cpp  main_ui.h  omron.cpp
application/smarttalk/demoApp/modules/include/common/: st_common.h  st_disp.h
application/smarttalk/demoApp/modules/src/common/: st_common.c
application/smarttalk/demoApp/modules/src/disp/: st_disp.c
application/smarttalk/demoApp/modules/src/socket/: st_socket.cpp
application/smarttalk/demoApp/modules/src/stream/: st_stream.cpp
application/smarttalk/demoApp/modules/src/vdec/: st_vdec.c
application/smarttalk/demoApp/modules/src/voice/: st_voice.cpp
application/smarttalk/demoApp/modules/src/xmlprase/: st_xmlprase.c
