######################################################################
# Copyright (C) 2002 ~ 2010, Beijing FMSoft Technology Co., Ltd.     #
# Room 902, Floor 9, Taixing, No.11, Huayuan East Road, Haidian      #
# District, Beijing, P. R. CHINA 100191.                             #
# All rights reserved.                                               #
#                                                                    #
# This software is the confidential and proprietary information of   #
# Beijing FMSoft Technology Co., Ltd. ("Confidential Information").  #
# You shall not disclose such Confidential Information and shall     #
# use it only in accordance you entered into with FMSoft.            #
#                                                                    #
#          http://www.minigui.com                                    #
#                                                                    #
######################################################################

SUBDIRS = pieces physics-animation

libmgncs4touchincludedir = $(includedir)/mgncs4touch

libmgncs4touchinclude_HEADERS = ../mgncs4touchconfig.h \
    mtouchdebug.h mgncs4touch.h mtouchcomm.h \
    mtouchrdr.h manimation.h mswitchbutton.h mnewtrackbar.h \
    mpicker.h mcombopicker.h mtimepicker.h mdatepicker.h \
    mbtnnavbar.h mimgnavbar.h mexlist.h mitembar.h balloon_tip_maker.h \
    mpieceitem.h mitemiterator.h mcenterhbox.h mlayout_manager.h mlinevbox.h \
    mcontainerctrl.h miconflow.h mfillboxex.h

EXTRA_DIST =

