libmgncs4touchincludedir = $(includedir)/mgncs4touch/pieces

HEAD_FILES = \
    mshapepushbuttonpiece.h \
    mshapeboxpiece.h \
    msimagepiece.h \
    mnsdrawpiece.h \
    mcolorablelabelpiece.h \
    m3dbuttonpiece.h \
    mabstractitemmanager.h \
    manimationeditpiece.h \
    mbuttonpanelpiece.h \
    mcheckmarkpiece.h \
    mexseparatorpiece.h \
    mgroupitemiterator.h \
    mgroupitemmanager.h \
    mgrouppieceitem.h \
    mindexlocatepiece.h \
    mindicatorbuttonpiece.h \
    mindicatorpiece.h \
    mitempiece.h \
    mlistitemiterator.h \
    mlistitemmanager.h \
    mnavigationbarpiece.h \
    mnavigationitem.h \
    mnavigationpanelpiece.h \
    mpanelpiece.h \
    mphoneseparatorpiece.h \
    mphonestaticrdrpiece.h \
    mradiopiece.h \
    mrotateswitchpiece.h \
    mslideswitchpiece.h \
    mtableviewitempiece.h \
    mtableviewpiece.h \
    mtextpiece.h \
    mtransroundpiece.h \
    mwidgethostpiece.h \
    mwrappaintpiece.h \
    mscrollviewpiece.h \
    mhscrollviewpiece.h

libmgncs4touchinclude_HEADERS = $(HEAD_FILES)

